--- a/css/style.css
+++ b/css/style.css
@@ -95,10 +95,11 @@ body {
 
     #now{
         font-weight: bold;
-        font-size: 15px;
+        font-size: 12px;
         position: absolute;
-        top: 140px;
-        left: 30px; 
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%, -50%);
     
     }
 
@@ -137,7 +138,7 @@ body {
         display: block;
     }
     /**/
-    
+
     .btn {
         display: flex;
         gap: 10px; /* Espacio entre botones */
